<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shibuyaxpress.nuclearcodeinspector.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailNukeFragment"
            app:destination="@id/fragment_detail_nuke"
            app:enterAnim="@anim/fragment_close_enter"
            app:exitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.shibuyaxpress.nuclearcodeinspector.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_codes"
        android:name="com.shibuyaxpress.nuclearcodeinspector.ui.codes.CodesFragment"
        android:label="@string/title_codes"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/fragment_detail_nuke"
        android:name="com.shibuyaxpress.nuclearcodeinspector.DetailNukeFragment"
        android:label="fragment_detail_nuke"
        tools:layout="@layout/fragment_detail_nuke" >
        <argument android:name="item"
            app:argType="com.shibuyaxpress.nuclearcodeinspector.models.Preview"/>
    </fragment>
</navigation>
